cmake_minimum_required(VERSION 2.8)
PROJECT(DESIGNP CXX C)
ENABLE_TESTING()

FIND_PACKAGE(Boost COMPONENTS unit_test_framework)
IF(Boost_UNITTESTFRAMEWORK)
  SET(HAVE_UNITTESTFRAMEWORK 1 CACHE INTERNAL "" FORCE)
ELSE(Boost_UNITTESTFRAMEWORK) 
  SET(HAVE_UNITTESTFRAMEWORK 0 CACHE INTERNAL "" FORCE)
ENDIF(Boost_UNITTESTFRAMEWORK)

ADD_SUBDIRECTORY(src)

